<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.canvas.krishna.awscognitotest.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/loginTitle_loginActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/loginTitle_loginActivity" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameTextInputLayout_loginActivity"
        style="@style/UserCredentialsInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/usernameEditText_loginActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/loginUsername_loginActivity" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextInputLayout_loginActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextInputLayout_loginActivity">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordEditText_loginActivity"
            style="@style/UserCredentialsInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/loginPassword_loginActivity" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout_loginActivity">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailEditText_loginActivity"
            style="@style/UserCredentialsInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/loginEmail_loginActivity"
            android:inputType="textWebEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginBtn_loginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:text="@string/loginConfirmBtn_loginActivity"
        android:text="@string/loginConfirmBtn_loginActivity"/>

</android.support.constraint.ConstraintLayout>
